# ValGraphNet

./: .gitignore  README.md  plan.txt  pyproject.toml
configs/: deforming_plate_case.full400_repo.yaml  deforming_plate_case.full_gpu.yaml  deforming_plate_case.optimized_gpu.yaml  deforming_plate_case.optimized_stress_gpu.yaml  deforming_plate_case.quick.yaml  deforming_plate_case.yaml  deforming_plate_chp.cell_memory_diagnostic.json  deforming_plate_chp.full400.yaml  deforming_plate_chp.neural_feature_energy.full400.yaml  deforming_plate_chp_ablation.checkpoints.example.json  deforming_plate_chp_ablation.validation.yaml  deforming_plate_constitutive_identifiability.yaml  deforming_plate_fair_mgn.full400.yaml  deforming_plate_force_identifiability.yaml  deforming_plate_multiscale_mgn.full400.yaml  hypercontact3d.yaml  hypercontact3d_chp.v1_4.yaml  hypercontact3d_chp.v1_9.yaml  valve_chp.full_tensor_ood.yaml  valve_hybrid.yaml
docs/: chp_gns.md  test_once_protocol.md
examples/: __init__.py
requirements/: base.txt  deforming_plate.txt  dev.txt
scripts/: abaqus_export_odb.py  analyze_deforming_plate_experiment.py  analyze_deforming_plate_optimization.py  audit_hypercontact3d.py  compare_physical_rollouts.py  convert_hypercontact3d.py  diagnose_cell_memory.py  download_deforming_plate.sh  evaluate_chp.py  export_fair_rollouts.py  export_legacy_rollouts.py  export_multiscale_rollouts.py  generate_hypercontact3d.py  generate_valve_ood_splits.py  rollout.py  run_chp_ablation_matrix.py  run_chp_seed_matrix.py  run_constitutive_identifiability.py  run_hypercontact3d.py  (+10 more)
(+78 files in other folders)
